Add scalar StreamVByte implementation